# morpheus_env

./: .env.example  .gitignore  404.html  README.md  build-tailwind.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  sitemap.xml  tailwind.config.js
api-reference/: index.html
architecture/: index.html
authentication/: index.html
configuration/: index.html
contributing/: index.html
core/: settings.py  urls.py  views.py
core/templates/: base.html  index.html  students.html
development/: index.html
docs/: api-reference.md  architecture.md  authentication.md  configuration.md  contributing.md  development.md  guidelines.md  index.md  installation.md  overview.md  prerequisites.md  project-structure.md  release-notes.md  security.md  tools.md
guidelines/: index.html
installation/: index.html
notifications/utils/: colors.py  email_oauth2.py  emails.py  new_user_logs.py  send_email.py  terminal_msg.py
overview/: index.html
prerequisites/: index.html
project-structure/: index.html
release-notes/: index.html
search/: search_index.json
security/: index.html
static/css/: custom.css
static/javascript/: num-converter.js  register.js  system-analysis.js
theme/: tailwind.config.js
theme/static_src/: package-lock.json
tools/: index.html  urls.py  views.py
tools/services/: ai_analysis.py  num_converter.py  system_metrics.py
tools/templates/: num_converter.html  system_analysis.html
users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
(+18 files in other folders)
